--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 main: com.austinasmus.RepDriver
 name: GlobalRep
-version: .8
+version: 1.0
 author: legit_craft
 description: Cross Server Reputation Plugin
 commands:
