--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 main: com.austinasmus.RepDriver
 name: GlobalRep
-version: 1.0
+version: 1.14
 author: legit_craft
 description: Cross Server Reputation Plugin
 commands:
@@ -18,19 +18,28 @@ permissions:
     default: true
   rep.amount.2:
     description: gives the player a rep power of 2
+    default: false
   rep.amount.3:
     description: gives the player a rep power of 3
+    default: false
   rep.amount.4:
     description: gives the player a rep power of 4
+    default: false
   rep.amount.5:
     description: gives the player a rep power of 5
+    default: false
   rep.amount.6:
     description: gives the player a rep power of 6
+    default: false
   rep.amount.7:
     description: gives the player a rep power of 7
+    default: false
   rep.amount.8:
     description: gives the player a rep power of 8
+    default: false
   rep.amount.9:
     description: gives the player a rep power of 9
+    default: false
   rep.amount.10:
     description: gives the player a rep power of 10
+    default: op
