--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,6 +1,7 @@
 main: com.legit.globalrep.RepDriver
+softdepend: [PlaceholderAPI]
 name: GlobalRep
-version: 1.8.2
+version: 1.8.3
 author: aasmus
 description: Cross Server Reputation Plugin
 commands:
